<resources>
    <string name="app_name">Congress Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="senate">Senate</string>
    <string name="house">House</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="total_votes">Total</string>
    <string name="missed_votes">Missed</string>
    <string name="vote_with_party">With \nParty</string>
    <string name="vote_against_party">Against Party</string>
    <string name="vote_history">Vote History</string>
    <string name="other_info">Other Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="place_holder">Reducing Employer burdens, unleasing innovation, ad labor development act of 2013</string>
    <string name="change_name">Change Name</string>
    <string name="account_settings">Account Settings</string>
    <string name="data_disclaimer">All data points found in this application are either pulled directly from ProPublica Congress API or based on averages derived from data pulled from ProPublica Congress API. For More information on the data found in this application please reach out to our support team.</string>

    <string-array name="top_spinner_items">
        <item>All</item>
        <item>Current</item>
        <item>Retired</item>
    </string-array>

    <string-array name="mid_spinner_items">
        <item>All</item>
        <item>Senate</item>
        <item>House</item>
    </string-array>

    <string-array name="bottom_spinner_items">
        <item>All</item>
        <item>Democrat</item>
        <item>Republican</item>
        <item>Independent</item>
    </string-array>


</resources>
