<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MemberDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/offWhite"
            app:layout_constraintBottom_toBottomOf="@id/main_linearL"
            app:layout_constraintEnd_toEndOf="@id/vertical_start_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/offWhite"
            app:layout_constraintBottom_toBottomOf="@id/main_linearL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_end_guideline"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/button_select_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/button_linearL">

            <View
                android:id="@+id/vote_his_select"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_linearL" />

            <View
                android:id="@+id/other_info_select"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_linearL" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/main_linearL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/offWhite"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
            app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/prof_img"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_txt_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="John Doe"
                        android:textSize="29sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/party_txt_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Republican"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/state_txt_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tennessee"
                        android:textSize="22sp" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Vote Stats"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/total_votes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="374"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_votes_lbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_votes"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@color/lightGreySolid" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/missed_votes_pct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="20"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/missed_votes_lbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/missed_votes"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@color/lightGreySolid" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vote_wparty_pct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="97"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vote_wparty_lbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_with_party"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:background="@color/lightGreySolid" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vote_aparty_pct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vote_aparty_lbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_against_party"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_linearL" />

        <LinearLayout
            android:id="@+id/button_linearL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <TextView
                android:id="@+id/vote_history_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/offWhite"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/vote_history"
                android:textAlignment="center"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/other_info_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/offWhite"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/other_info"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/other_info_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
            app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/button_select_layout">

            <TextView
                android:id="@+id/seniority_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Seniority:"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/next_election_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Next Election:"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/committees_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/offWhite"
                android:clickable="true"
                android:focusable="true"
                android:text="View Committees"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sponsored_bills_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/offWhite"
                android:clickable="true"
                android:focusable="true"
                android:text="View recent bills by this member"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />


        </LinearLayout>


        <ListView
            android:id="@android:id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="58dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
            app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
            app:layout_constraintTop_toBottomOf="@id/button_select_layout" />

        <ProgressBar
            android:id="@+id/loadin_votes_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/vertical_center"
            app:layout_constraintTop_toBottomOf="@id/button_linearL" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.44" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_tab_bar"
        app:menu="@menu/bottom_nav_menu_alpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@drawable/nav_item_color"
        app:itemTextColor="@drawable/nav_item_color"
        android:layout_alignParentBottom="true"
        android:background="@color/darkBlueSolid"/>


</RelativeLayout>